[tool.poetry]
name = "relay"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.3.2"
async-timeout = "^3.0.0"
attrs = "^18.1.0"
chardet = "^3.0.4"
idna = "^2.7"
idna-ssl = "^1.1.0"
multidict = "^4.3.1"
pycrypto = "^2.6.1"
PyYAML = "^3.13"
simplejson = "^3.16.0"
yarl = "^1.2.6"
cachetools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
